--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,14 @@
   box-sizing: border-box;
 }
 
-@media (max-width: 3000px) {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 16px;
+}
+
+@media (min-width: 1021px) {
   body {
     width: 100%;
     height: 100vh;
