--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Inter', Arial, sans-serif;
-  font-size: 16px;
-}
-
-@media (min-width: 1021px) {
   body {
     width: 100%;
     height: 100vh;
@@ -79,7 +71,6 @@ body {
     font-weight: 600;
     cursor: pointer;
   }
-}
 
 @media (min-width: 425px) and (max-width: 1020px) {
   body {
@@ -90,7 +81,7 @@ body {
     max-width: 80%;
     height: auto;
     padding: 1rem;
-    justify-content: stat;
+    font-family: "Inter", Arial, sans-serif;
   }
 
   .attribution {
@@ -145,6 +136,7 @@ body {
     padding: 1rem;
     display: flex;
     justify-content: center;
+    font-family: "Inter", Arial, sans-serif;
   }
 
   .user-image {
